--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@
 html, body {
   height: 100%;
   font-family: "Archivo", sans-serif;
-  background: radial-gradient(#242424 0%, #000000 50%);  color: #fff;
-  display: flex;
+  background: linear-gradient(180deg, #141414 0%, #111111 100%);  display: flex;
   align-items: center;
   justify-content: center;
   overflow: hidden;
